src/test/compile-fail/crateresolve.rs
// aux-build:crateresolve-1.rs
// aux-build:crateresolve-2.rs
// aux-build:crateresolve-3.rs
// error-pattern:multiple matching crates for `crateresolve`

use crateresolve;

fn main() {
}
